         warning. There's no chance that it is, but clang doesn't realise that
         (Sergio).
20150225 pzx_read.c,szx.c,tzx_read.c,warajevo_read.c: avoid (undefined) reliance
         on pointer overflow in buffer length checks (Stuart).
20150302 internals.h,pzx_read.c,szx.c,test/test.c,zxs.c: add and use ARRAY_SIZE
         macro (Stuart).
20150302 libspectrum.h.in: add libspectrum_{new,new0,renew}() macros (Stuart).
20150302 accessor.pl,creator.c,csw.c,dck.c,ide.c,microdrive.c,pzx_read.c,rzx.c,
         szx.c,tape.c,tape_block.c,tzx_read.c,tzx_write.c: use libspectrum_new()
         and libspectrum_renew() macros where sizeof(elem) > 1 (Stuart).
20150302 libspectrum.in.h: fix ordering of args in libspectrum_new0() (Stuart).
20150302 z80.c: fix overallocation for uncompressed v2 data blocks (Stuart).
20150302 bzip2.c,crypto.c,csw.c,dck.c,ide.c,libspectrum.c,microdrive.c,plusd.c,
         pzx_read.c,rzx.c,sna.c,snapshot.c,sp.c,szx.c,tap.c,test/test.c,
         tzx_read.c,tzx_write.c,warajevo_read.c,wav.c,z80.c,z80em.c,zlib.c,
         zxs.c: use libspectrum_{new,new0,renew}() macros where
         sizeof(elem) == 1 (Stuart).
20150302 memory.c: check for overflow in libspectrum_calloc() (Stuart).
20150302 libspectrum.h.in,memory.c: add libspectrum_{m,re}alloc_n() and use this
         for libspectrum_{new,renew}() macros (Stuart).
20150302 libspectrum.h.in,memory.c: rename libspectrum_calloc() to
         libspectrum_malloc0_n() (Stuart).
20150315 README,configure.ac: remove automatic fallback to GLib replacement (now
         --with-fake-glib) (Stuart).
20150315 make-perl.c: add LIBSPECTRUM_HAS_GLIB_REPLACEMENT macro (Stuart).
20150316 configure.ac: always use -Wwrite-strings when using GCC (Stuart).
20150316 zlib.c,zxs.c: define ZLIB_CONST when including <zlib.h> and remove cast
         used as workaround for discarding of const (Stuart).
20150316 pzx_read.c: add missing const qualifiers and remove casts (Stuart).